--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.20",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "start": "tsc && node ./dist/server.js"
+    "start": "tsc && node ./dist/server.js",
+    "prettier": "prettier --write \"**/*.ts\""
   }
 }
